--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "rewrites": [
     {
       "source": "/(.*)",
+      "destination": "/index.html",
       "has": [
         {
           "type": "host",
           "value": "^(?!.*\\.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|otf|eot|json)$).*$"
         }
-      ],
-      "destination": "/"
+      ]
     }
   ]
 }
